[package]
name = "vf"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "extras"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", ] }
chrono = "0.4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
actix-web = "4"
actix-cors = "0.6.4"
async-graphql = "5.0"
async-graphql-actix-web = "5.0"
