[package]
name = "vf"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "extras"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

juniper = {version = "0.15"}
actix-web = "4"
actix-web-lab = "0.19.1"
actix-cors = "0.6.4"
env_logger = "0.10"
log = "0.4"