[package]
name = "vf"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "extras", "numeric"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.3.1", features = ["serde"] }

# Juniper with GraphQL scalar feature enabled
juniper = { version = "0.15", features = ["chrono", "uuid", "url", "default"] }

# Actix dependencies
actix-web = "4"
actix-web-lab = "0.19.1"
actix-cors = "0.6.4"

# Logging
env_logger = "0.10"
log = "0.4"